<resources>
    <string name="app_name">Listener</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="action_save">Save</string>
    <string name="action_revert">Revert</string>

    <!-- Strings used for fragments for navigation -->

    <string name="login_fragment_label">Login</string>
    <string name="sign_in_fragment_label">Sign In</string>
    <string name="lists_previews_fragment_label">@string/app_name</string>
    <string name="list_add_fragment_label">Add List</string>
    <string name="records_list_fragment_label">List Fragment</string>

    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="discard">Discard</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="list_id_hint">Unique ID</string>
    <string name="list_name_hint">List Name</string>
    <string name="list_details_hint">Optional Details</string>
    <string name="list_type_hint">List Type</string>

    <string name="id_taken_error">Id is already taken!</string>
    <string name="email_taken_error">Email address is already used!</string>
    <string name="empty_input_error">Input can\'t be empty!</string>
    <string name="short_input_error">Input must be at least %d characters</string>
    <string name="none_selected_error">Must choose an option!</string>
    <string name="invalid_toast">Input is invalid!</string>
    <string name="revert">revert</string>

    <string name="unknown_error">Unknown error</string>

    <string name="signed_out">Signed Out</string>
    <string name="save_changes_prompt">Would you like to save your changes?</string>
    <string name="addition_failed">Unable to create :(</string>
    <string name="remove_failed">Unable to remove :(</string>
    <string name="remove_success">Removed successfully</string>
    <string name="load_failed">Unable to load :(</string>
    <string name="fetching_failed">Error fetching data :(</string>
    <string name="sign_in_failed">Wrong details</string>
    <string name="save_failed">Unable to save :(</string>
    <string name="successfully_saved">Changes were saved successfully!</string>
    <string name="successfully_reverted">Changes were reverted</string>

    <string name="users_unavailable">Users unavailable</string>
    <string name="all_users_invited">All users are already invited</string>
    <string name="invite_user_prompt">Invite user to list?</string>
    <string name="leave_list_prompt">Are you sure you want to leave?</string>

    <string name="user_email_hint">Email Address</string>
    <string name="user_name_hint">Username</string>
    <string name="user_pass_hint">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="already_registered_prompt">Already a user?</string>
    <string name="email_sign_in">Sign in with an email</string>
    <string name="remove">Remove</string>
    <string name="replace">Replace</string>
    <string name="leave_list">Leave</string>
    <string name="invite_user_list">Invite User</string>
    <string name="users_headline">Users:</string>

</resources>